cmake_minimum_required(VERSION 3.12)
project(u2f_tests)

set(CMAKE_CXX_STANDARD 14)

include_directories(HID)
include_directories(HID/core/adb)
include_directories(HID/core/adf/libadf/include)
include_directories(HID/core/adf/libadf/include/adf)
include_directories(HID/core/adf/libadfhwc/include)
include_directories(HID/core/adf/libadfhwc/include/adfhwc)
include_directories(HID/core/debuggerd)
include_directories(HID/core/fastboot)
include_directories(HID/core/fastbootd)
include_directories(HID/core/fastbootd/commands)
include_directories(HID/core/fs_mgr)
include_directories(HID/core/fs_mgr/include)
include_directories(HID/core/healthd)
include_directories(HID/core/include)
include_directories(HID/core/include/android)
include_directories(HID/core/include/backtrace)
include_directories(HID/core/include/ctest)
include_directories(HID/core/include/cutils)
include_directories(HID/core/include/diskconfig)
include_directories(HID/core/include/log)
include_directories(HID/core/include/memtrack)
include_directories(HID/core/include/mincrypt)
include_directories(HID/core/include/nativebridge)
include_directories(HID/core/include/netutils)
include_directories(HID/core/include/pixelflinger)
include_directories(HID/core/include/private)
include_directories(HID/core/include/private/pixelflinger)
include_directories(HID/core/include/system)
include_directories(HID/core/include/sysutils)
include_directories(HID/core/include/usbhost)
include_directories(HID/core/include/utils)
include_directories(HID/core/include/ziparchive)
include_directories(HID/core/include/zipfile)
include_directories(HID/core/init)
include_directories(HID/core/libbacktrace)
include_directories(HID/core/libcutils)
include_directories(HID/core/libcutils/arch-x86_64)
include_directories(HID/core/libion/include)
include_directories(HID/core/libion/include/ion)
include_directories(HID/core/libion/kernel-headers)
include_directories(HID/core/libion/kernel-headers/linux)
include_directories(HID/core/libion/original-kernel-headers)
include_directories(HID/core/libion/original-kernel-headers/linux)
include_directories(HID/core/libion/tests)
include_directories(HID/core/liblog)
include_directories(HID/core/liblog/tests)
include_directories(HID/core/libnativebridge/tests)
include_directories(HID/core/libnetutils)
include_directories(HID/core/libpixelflinger)
include_directories(HID/core/libpixelflinger/codeflinger)
include_directories(HID/core/libpixelflinger/codeflinger/tinyutils)
include_directories(HID/core/libprocessgroup)
include_directories(HID/core/libprocessgroup/include)
include_directories(HID/core/libprocessgroup/include/processgroup)
include_directories(HID/core/libsparse)
include_directories(HID/core/libsparse/include)
include_directories(HID/core/libsparse/include/sparse)
include_directories(HID/core/libsuspend)
include_directories(HID/core/libsuspend/include)
include_directories(HID/core/libsuspend/include/suspend)
include_directories(HID/core/libsync)
include_directories(HID/core/libsync/include)
include_directories(HID/core/libsync/include/sync)
include_directories(HID/core/libutils/tests)
include_directories(HID/core/libzipfile)
include_directories(HID/core/logd)
include_directories(HID/core/logwrapper/include)
include_directories(HID/core/logwrapper/include/logwrap)
include_directories(HID/core/mkbootimg)
include_directories(HID/core/run-as)
include_directories(HID/core/toolbox)
include_directories(HID/core/toolbox/upstream-netbsd/bin/cp)
include_directories(HID/core/toolbox/upstream-netbsd/bin/dd)
include_directories(HID/core/toolbox/upstream-netbsd/bin/mv)
include_directories(HID/core/toolbox/upstream-netbsd/include)
include_directories(HID/core/toolbox/upstream-netbsd/include/sys)
include_directories(HID/core/toolbox/upstream-netbsd/usr.bin/grep)
include_directories(HID/hidapi/hidapi)
include_directories(HID/hidapi/testgui)

#find_library(HIDAPI NAMES hidapi-libusb)
#find_library(HIDAPI NAMES hidapi-hidraw)
SET(HIDAPI -lhidapi-hidraw)
message(${HIDAPI})
#add_library(HIDAPI HID/hidapi/linux/hid.c)
#add_library(HIDAPI HID/hidapi/libusb/hid.c)

add_library(u2f_util HID/u2f_util.cc HID/u2f_util.h HID/u2f.h HID/u2f_hid.h)
target_link_libraries(u2f_util ${HIDAPI})

add_library(core
        HID/core/libmincrypt/sha256.c
        HID/core/libmincrypt/p256_ecdsa.c
        HID/core/libmincrypt/p256_ec.c
        HID/core/libmincrypt/p256.c
        HID/core/libmincrypt/dsa_sig.c
        )
target_link_libraries(u2f_util ${HIDAPI})


add_executable(list HID/list.c)
target_link_libraries(list ${HIDAPI})

add_executable(HIDTest HID/HIDTest.cc)
target_link_libraries(HIDTest u2f_util -lrt -ludev ${HIDAPI} )
target_compile_definitions(HIDTest PRIVATE -D__OS_LINUX)

add_executable(u2f_tests HID/U2FTest.cc )
target_link_libraries(u2f_tests u2f_util ${HIDAPI} core)
